<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">百秘一书</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_choice">精选</string>
    <string name="tab_nearby">附近</string>
    <string name="tab_pic">娱乐</string>
    <string name="tab_more">更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="publication_secret">秘密投稿</string>
    <string name="publication">发表</string>
    <string name="secret_countm_max">300</string>
    <string name="publication_faile">提交失败！请重试 ！</string>
    <string name="publication_success">提交成功，待审核通过后发表！</string>
    <string name="write_secret_hint">您的投稿会在审核后发表，审核通过的标准：真实事件的吐槽、内容新鲜的事件、心中隐藏的秘密，请不要使用您或其他人的真实信息（电话 地址等）以免给您或其他人带来麻烦。</string>
    <string name="write_comment_hint">网络也有秩序，请文明用语，拒绝粗俗，违者永久封禁帐号~</string>
    <string name="comment_title">评论</string>
    <string name="back">返回</string>
    <string name="add_one">+1</string>
    <string name="write_comment">写评论</string>
    <string name="publication_comment">发表评论</string>
    <string name="no_conn_network">网络未连接，请检查网络设置 !</string>
    <string name="loading">加载中.....</string>
    <string name="say">说:</string>
    <string name="date_now">刚才</string>
    <string name="date_min_befor">分钟前</string>
    <string name="date_hour_befor">小时前</string>
    <string name="date_day_befor">天前</string>
    <string name="date_month_befor">个月前</string>
    <string name="user_nologin">未登陆</string>
    <string name="user_login">登陆</string>
    <string name="user_register">注册</string>
    <string name="my_user">我的帐户</string>
    <string name="user_name">用户帐号</string>
    <string name="user_pass">登陆密码</string>
    <string name="twopass">确认密码</string>
    <string name="sex">性别</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="commit">提交</string>
    <string name="notid">请输入帐号</string>
    <string name="notpass">请输入密码</string>
    <string name="passerror">你输入的密码不正确</string>
    <string name="usernotfind">你输入的帐号不存在</string>
    <string name="login_now">正在登陆....</string>
    <string name="logout">退出登陆</string>
    <string name="namenotnull">请输入用户昵称!</string>
    <string name="passnotnull">请输入登陆密码!</string>
    <string name="twopassnotpass">确认密码和登陆密码不一置!</string>
    <string name="pass_so_easy">密码至少6位!</string>
    <string name="beingRegister">注册中......</string>
    <string name="register_succes">注册成功</string>
    <string name="registerFail">注册失败，请重试！</string>
    <string name="login_fail">帐号或密码错误!</string>
    <string name="register_fail_username">注册失败，帐户已存在！</string>
    <string name="unknown_address">火星</string>
    <string name="pass_exit">再按一次退出应用！</string>
    <string name="no_check_network">检测不到网络连接！</string>
    <string name="cominting">正在提交....</string>
    <string name="exit_confirm">确认要退出吗？文本内容将不会被保存！</string>
    <string name="no_more">没有更多了</string>
    <string name="to_write_secret">发表秘密</string>
    <string name="my_secret">我的秘密</string>
    <string name="my_comment">我的评论</string>
    <string name="check_update">检查新版本</string>
    <string name="current_version">当前版本</string>
    <string name="about_our">关于我们</string>
    <string name="check_update_now">检测中....</string>
    <string name="check_fail">检查失败</string>
    <string name="is_new_version">已是最新版本!</string>
    <string name="has_new_version">有新版本更新</string>
    <string name="download_update">下载</string>
    <string name="mysecret_title">我的秘密</string>
    <string name="mysecret_count">秘文数</string>
    <string name="kilometer">公里</string>
    <string name="meter">米</string>
    <string name="commented">评论了</string>
    <string name="empty_my_comment">没有找到我的评论，点击刷新</string>
    <string name="empty_my_secret">你连一条秘密都没发表过</string>
    <string name="empty_location_no">位置服务不可用</string>
    <string name="empty_near_secret">附近连一条秘密都没有</string>
    <string name="theme">主题</string>
    <string name="switch_theme_to">切换主题为</string>
    <string name="switch_theme_to_night">夜间</string>
    <string name="switch_theme_to_during">白天</string>
    <string name="slogan">我们是一群有理想的小屌丝</string>
    <string name="programmers_hh">攻城狮：黄老虎</string>
    <string name="design_hw">色剂狮：何老虎</string>
    <string name="delete_fail">删除失败！</string>
    <string name="delete_success">删除成功！</string>
    <string name="delete_confirm">确认要删除吗?</string>
    <string name="tips">提示</string>
    <string name="reply">回复</string>
    <string name="secret_deleted">秘密已经被删除!</string>
    <string name="comment_publication_success">评论已发表！</string>
    <string name="my_message">我的通知</string>
    <string name="comment_your_secret">评论了你的秘密!</string>
    <string name="comment_your_comment">回复了你的评论!</string>
    <string name="message_tips">您的百密一书有新消息！</string>
    <string name="empty_my_message">没有我的通知，点击刷新</string>
    <string name="reply_you">回复你：</string>
    <string name="your_comment">你的评论：</string>
    <string name="your_secret">你的秘密：</string>
    <string name="very_top">热门</string>
    <string name="very_new">最新</string>
    <string name="weibo_login">新浪微博登陆</string>
    <string name="qq_login">腾讯QQ登陆</string>
    <string name="other_login">第三方帐号登录</string>
    <string name="copyright">Copyright © 2014 - 2018 www.jerryblog.net</string>
    <string name="other_login_fail">第三方登录登陆失败！</string>
    <string name="user_head">头像</string>
    <string name="update_name">帐号</string>
    <string name="logined">已登陆</string>
    <string name="weibo">新浪微博</string>
    <string name="qq">腾讯QQ</string>
    <string name="baimi">百秘帐号</string>
    <string name="update_email">邮箱</string>
    <string name="no_settings">未设置</string>
    <string name="no_verified">未验证</string>
    <string name="password">密码</string>
    <string name="update_password">********</string>
    <string name="update_password2">修改密码</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败 </string>
    <string name="send_verified_email">您的邮箱未验证，是否发送验证信息到邮箱？</string>
    <string name="send_verified_email_success">验证邮件已发送!</string>
    <string name="send_verified_email_fail">验证邮件发送失败！</string>
    <string name="old_pass">原密码:</string>
    <string name="new_pass">新密码:</string>
    <string name="not_old_pass">请输入原密码</string>
    <string name="not_new_pass">请输入新密码</string>
    <string name="correct_old_pass">原密码不正确</string>
    <string name="update_email2">修改邮箱</string>
    <string name="save">保存</string>
    <string name="alert_email">您已经设置过邮箱并且已经通过验证，如果更改，我们将重新发送验证邮件到新的邮箱！</string>
    <string name="alert_email2">设置邮箱后可找回您的登录密码！设置后，我们将发送验证邮件到您的邮箱，您验证后即可生效！</string>
    <string name="alert_email3">您已经设置过邮箱但没有通过验证！，如果更改，我们将重新发送验证邮件到新的邮箱！</string>
    <string name="input_valid_email">请输入正确的邮箱！</string>
    <string name="email_exist">邮箱已经存在！</string>
    <string name="update">修改</string>
    <string name="tease_me">你是在逗我吗？</string>
    <string name="no_user_photo">为了保护你的隐私，发表秘密不使用您的头像！</string>
    <string-array name="add_pic">
        <item>拍照</item>
        <item>从手机相册选择</item>
    </string-array>
    <string-array name="add_pic_delete">
        <item>拍照</item>
        <item>从手机相册选择</item>
        <item>删除</item>
    </string-array>
    <string name="add_pic_dialog_title">可别上传淫秽图片哦!</string>

</resources>