<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="?attr/title_bg_color"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="15dip"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_our"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/one_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dip"
                android:background="@drawable/defalut_photo"
                android:contentDescription="@string/app_name"
                android:src="@drawable/photo_frame" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/one_view"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dip"
                android:background="@drawable/font" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="60dip"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programmers_hh"
                    android:textColor="@color/space_item_name_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/design_hw"
                    android:textColor="@color/space_item_name_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dip"
                android:gravity="center_horizontal"
                android:text="@string/slogan"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>