<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panel_bg"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="?attr/title_bg_color"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="15dip"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_user"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view"
        android:layout_marginTop="40dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="250dip"
            android:layout_height="45dip" >

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit"
                android:inputType="none"
                android:singleLine="true"
                android:paddingLeft="100dip"
                android:textSize="14sp" />

            <TextView
                android:layout_width="90dip"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit_left"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/tab_text_color"
                android:textSize="13sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="250dip"
            android:layout_height="45dip"
            android:layout_marginTop="10dip" >

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit"
                android:inputType="textPassword"
                android:singleLine="true"
                android:paddingLeft="100dip"
                android:textSize="14sp" />

            <TextView
                android:layout_width="90dip"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit_left"
                android:gravity="center"
                android:text="@string/user_pass"
                android:textColor="@color/tab_text_color"
                android:textSize="13sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="250dip"
            android:layout_height="45dip"
            android:layout_marginTop="10dip" >

            <EditText
                android:id="@+id/twopass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit"
                android:inputType="textPassword"
                android:paddingLeft="100dip"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="90dip"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit_left"
                android:gravity="center"
                android:text="@string/twopass"
                android:textColor="@color/tab_text_color"
                android:textSize="13sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="250dip"
            android:layout_height="45dip"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="90dip"
                android:layout_height="match_parent"
                android:background="@drawable/register_edit_left"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="@color/tab_text_color"
                android:textSize="13sp" />

            <RadioGroup
                android:id="@+id/user_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/six_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_bg"
                    android:checked="true"
                    android:text="@string/sex_man"
                    android:textColor="@color/tab_text_color"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/six_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:button="@drawable/checkbox_bg"
                    android:text="@string/sex_woman"
                    android:textColor="@color/tab_text_color"
                    android:textSize="13sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/commit_register"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/login_commit_purple"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="@drawable/text_white_black"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>