<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:gravity="center_vertical"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dip"
            android:clickable="true"
            android:onClick="onCancel"
            android:text="@android:string/cancel"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/publication_secret"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginRight="15dip"
            android:clickable="true"
            android:onClick="onPublication"
            android:text="@string/publication"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/contents"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="8dip"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:gravity="top"
        android:inputType="none"
        android:hint="@string/write_secret_hint"
        android:textColor="@android:color/white"
        android:maxLength="140"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:background="@android:color/transparent" >

        <TextView
            android:id="@+id/contents_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/secret_countm_max"
            android:textColor="#ddd"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>