<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/activity_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="?attr/title_bg_color"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="15dip"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mysecret_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <com.huanghua.mysecret.view.xlist.XListView
            android:id="@+id/secret_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:dividerHeight="0dip"
            android:fadingEdgeLength="0dp"
            android:fastScrollEnabled="false"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" />
        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?attr/item_text_color"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/empty_my_secret"/>
    </FrameLayout>

</LinearLayout>